sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/IsExpression.sand
pub class IsExpression {
    foo() {
        [
            x() is Foo,
            x() is Foo[],
            x() is Foo[][],
            x() is Foo[][][],

            x() is Foo?,
            x() is Foo[]?,
            x() is Foo[][]?,
            x() is Foo[][][]?,
        ]
    }
}