sandc/test/fixtures/astRegression/shouldFail/productions/notinstanceofExpression/List.sand
pub class List {
    foo() {
        x() notinstanceof Foo[+]
    }
}